--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
 	<title>Javascript Box - OOP demo</title>
+
 </head>
 <body>
 
-	<svg id="svg" xmlns="http://www.w3.org/2000/svg"></svg>
+	<svg id="svg" xmlns="http://www.w3.org/2000/svg" height="100%" width = "100%"></svg>
 
 	<script>
 	function Circle(cx, cy, html_id)
 	{
 		var html_id = html_id;
 		this.info = { cx: cx,  cy: cy };
-		
 		//private function that generates a random number
 		var randomNumberBetween = function(min, max){
 			return Math.random()*(max-min) + min;
@@ -40,15 +40,24 @@
 			var el = document.getElementById(html_id);
 
 			//see if the circle is going outside the browser. if it is, reverse the velocity
-			if( this.info.cx > document.body.clientWidth || this.info.cx < 0)
+			if( this.info.cx + 25 > document.body.clientWidth|| this.info.cx -20 < 0)
 			{
 				this.info.velocity.x = this.info.velocity.x * -1;
 			}
-			if( this.info.cy > document.body.clientHeight || this.info.cy < 0)
+			if( this.info.cy +20 > document.body.clientHeight || this.info.cy -20 < 0)
 			{
 				this.info.velocity.y = this.info.velocity.y * -1;
 			}
+			// if( this.info.cx > document.body.clientWidth -this.info.cx|| this.info.cx < this.info.cy*-1)
+			// {
+			// 	this.info.velocity.x = this.info.velocity.x * -1;
+			// }
+			// if( this.info.cy > document.body.clientHeight -this.info.cy|| this.info.cy < this.info.cx*-1)
+			// {
+			// 	this.info.velocity.y = this.info.velocity.y * -1;
+			// }
 
+			
 			this.info.cx = this.info.cx + this.info.velocity.x*time;
 			this.info.cy = this.info.cy + this.info.velocity.y*time;
 
@@ -78,7 +87,7 @@
 		this.loop = function(){
 			for(circle in circles)
 			{
-				circles[circle].update(1);
+				circles[circle].update(2);
 			}
 		}
 
