--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 	<svg id="svg" xmlns="http://www.w3.org/2000/svg" height="100%" width = "100%"></svg>
 
 	<script>
-	function Circle(cx, cy, html_id)
+	function Circle(cx, cy, radius, html_id)
 	{
 		var html_id = html_id;
-		this.info = { cx: cx,  cy: cy };
+		var radius = radius;
+		this.info = { cx: cx,  cy: cy, cr: radius};
 		//private function that generates a random number
 		var randomNumberBetween = function(min, max){
 			return Math.random()*(max-min) + min;
@@ -28,7 +29,7 @@
 			var circle = makeSVG('circle', 
 				{ 	cx: this.info.cx,
 				  	cy: this.info.cy,
-				  	r:  10,
+				  	r:  radius,
 				  	id: html_id,
 				  	style: "fill: black"
 				});
@@ -40,11 +41,12 @@
 			var el = document.getElementById(html_id);
 
 			//see if the circle is going outside the browser. if it is, reverse the velocity
-			if( this.info.cx + 25 > document.body.clientWidth|| this.info.cx -20 < 0)
+			console.log(this.info.r);
+			if( this.info.cx +this.info.cr*2 > document.body.clientWidth|| this.info.cx -this.info.cr   < 0)
 			{
 				this.info.velocity.x = this.info.velocity.x * -1;
 			}
-			if( this.info.cy +20 > document.body.clientHeight || this.info.cy -20 < 0)
+			if( this.info.cy +this.info.cr*2  > document.body.clientHeight || this.info.cy -this.info.cr   < 0)
 			{
 				this.info.velocity.y = this.info.velocity.y * -1;
 			}
@@ -70,7 +72,10 @@
 	        var el= document.createElementNS('http://www.w3.org/2000/svg', tag);
 	        for (var k in attrs)
 	        {
+	            // console.log(k);
 	            el.setAttribute(k, attrs[k]);
+
+
 	        }
 	        return el;
 	    }
@@ -88,24 +93,28 @@
 			for(circle in circles)
 			{
 				circles[circle].update(2);
+
 			}
 		}
 
-		this.createNewCircle = function(x,y){
-			var new_circle = new Circle(x,y,counter++);
+		this.createNewCircle = function(x,y,r){
+			var radius = r;
+			var new_circle = new Circle(x,y,radius,counter++);
 			circles.push(new_circle);
 			// console.log('created a new circle!', new_circle);
 		}
 
 		//create one circle when the game starts
-		this.createNewCircle(document.body.clientWidth/2, document.body.clientHeight/2);
+		var radius = 20;
+		this.createNewCircle(document.body.clientWidth/2, document.body.clientHeight/2, radius);
 	}
 
 	var playground = new PlayGround();
 	setInterval(playground.loop, 15);
-
+		
 	document.onclick = function(e) {
-		playground.createNewCircle(e.x,e.y);
+		var radius = 20;
+		playground.createNewCircle(e.x,e.y,radius);
 	}
 	
 	</script>
