--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		var html_id = html_id;
 		var radius = radius;
 		this.info = { cx: cx,  cy: cy, cr: radius};
+		var randomColor = Math.floor(Math.random()*16777215).toString(16);
 		//private function that generates a random number
 		var randomNumberBetween = function(min, max){
 			return Math.random()*(max-min) + min;
@@ -31,7 +32,7 @@
 				  	cy: this.info.cy,
 				  	r:  radius,
 				  	id: html_id,
-				  	style: "fill: black"
+				  	style: "fill: #"+randomColor + ";"
 				});
 
 			document.getElementById('svg').appendChild(circle);
@@ -41,12 +42,12 @@
 			var el = document.getElementById(html_id);
 
 			//see if the circle is going outside the browser. if it is, reverse the velocity
-			console.log(this.info.r);
+			
 			if( this.info.cx +this.info.cr*2 > document.body.clientWidth|| this.info.cx -this.info.cr   < 0)
 			{
 				this.info.velocity.x = this.info.velocity.x * -1;
 			}
-			if( this.info.cy +this.info.cr*2  > document.body.clientHeight || this.info.cy -this.info.cr   < 0)
+			if( this.info.cy +this.info.cr*2  > document.body.clientHeight || this.info.cy -this.info.cr*2   < 0)
 			{
 				this.info.velocity.y = this.info.velocity.y * -1;
 			}
@@ -105,7 +106,7 @@
 		}
 
 		//create one circle when the game starts
-		var radius = 20;
+		var radius = 10;
 		this.createNewCircle(document.body.clientWidth/2, document.body.clientHeight/2, radius);
 	}
 
@@ -113,8 +114,30 @@
 	setInterval(playground.loop, 15);
 		
 	document.onclick = function(e) {
-		var radius = 20;
-		playground.createNewCircle(e.x,e.y,radius);
+		var radius;
+		
+
+			var mousedown_time;
+
+			function getTime(){
+				var date = new Date();
+				return date.getTime();
+			}
+			document.onmousedown = function(e){
+				mousedown_time = getTime();
+				
+			}
+			document.onmouseup = function(e){
+				time_pressed = getTime() - mousedown_time;
+				radius = Math.floor(time_pressed/60);
+				playground.createNewCircle(e.x,e.y,radius);
+			}
+			
+			
+		
+		console.log(time_pressed);
+
+		
 	}
 	
 	</script>
